Updated the tpl;

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-VITE_PROJECT_NAME=Widget Portal v1
-VITE_BRAND_WIDGET_URL=https://lucida-brand-widget.netlify.app/
-VITE_PRODUCT_WIDGET_URL=https://lucida-product-widget.netlify.app/
+VITE_PROJECT_NAME=Demo Brand
+VITE_BRAND_WIDGET_URL=https://demo.brand.lucidaclub.com/
+VITE_PRODUCT_WIDGET_URL=https://demo.product.lucidaclub.com/
 
 VITE_ALGOLIA_APP_ID=FOTOATTP98
 VITE_ALGOLIA_API_KEY=7c9aa9d72c97b19d46cf34fdc64dc408
-VITE_ALGOLIA_INDEX_NAME=Brand1-Products
-VITE_BRAND_NAME="Generic Lucida Portal"
+VITE_ALGOLIA_INDEX_NAME=demo
+VITE_BRAND_NAME="Demo Brand"
