--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "lucida-portal-tpl",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "deploy:staging": "vite build && netlify deploy",
-    "deploy:production": "vite build && netlify deploy --prod"
+    "deploy:production": "vite build && netlify deploy --prod",
+    "deploy:functions": "netlify deploy --prod --functions=netlify/functions"
   },
   "dependencies": {
     "@algolia/autocomplete-core": "^1.17.0",
