--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy:staging": "vite build && netlify deploy",
-    "deploy:production": "vite build && netlify deploy --prod",
+    "deploy:staging": "netlify deploy",
+    "deploy:production": "netlify deploy --prod",
     "deploy:functions": "netlify deploy --prod --functions=netlify/functions"
   },
   "dependencies": {
