--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "airtable": "^0.12.2",
+    "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
